# graphviz-native

./: .gitignore  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: cross-compile.md  progress.md
example/react-native/: App.tsx  metro.config.js  package.json
example/rust/: Cargo.toml
example/rust/src/: main.rs
example/web/: README.md
react-native/: package.json
react-native/android/src/main/: CMakeLists.txt
react-native/android/src/main/java/com/graphviznative/: GraphvizModule.java
react-native/ios/: GraphvizNative.podspec
react-native/scripts/: download-native.js
react-native/src/: index.ts
rust/graphviz/: Cargo.toml
rust/graphviz-sys/: Cargo.toml  build.rs
rust/graphviz-sys/src/: lib.rs
rust/graphviz/src/: lib.rs
scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-wasm.sh  build-windows.sh  common.sh
src/: graphviz_api.c  graphviz_api.h
web/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/src/: index.ts  shared.ts  viz-js.d.ts  worker.ts
web/src/__tests__/: index.test.ts  worker.test.ts
web/src/__tests__/mocks/: viz-wasm.ts
