[package]
name = "graphviz-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Safe Rust wrapper for the graphviz-native C library"
license = "Apache-2.0"
authors = ["kookyleo <kookyleo@gmail.com>"]

[dependencies]
graphviz-native-sys = { path = "../graphviz-sys" }
thiserror = "1"
