[package]
name = "graphviz-anywhere"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Safe Rust wrapper for the graphviz-anywhere C library"
license = "Apache-2.0"
authors = ["kookyleo <kookyleo@gmail.com>"]

[dependencies]
graphviz-anywhere-sys = { path = "../graphviz-sys" }
thiserror = "1"
